# api_python_3decision

./: .gitignore  LICENSE  README.md  api.py  conda_env.yml  pyproject.toml  requirements.txt  settings.py  setup.py
.githooks/: pre-commit
api_python_3decision/: api.py  settings.py
api_python_3decision/endpoints/: __init__.py  annotation_endpoints.py  ligand_endpoints.py  project_endpoints.py  structure_endpoints.py
api_python_3decision/session/: req_session.py
docker/: Dockerfile  README.md  requirements.txt
docker/3dec_api_config/: .3decision_commands.py.swpBKP  3decision_commands.py  config.properties  settings.py
docker/3dec_api_input/: 5fpzalex_phases.mtz
docker/3dec_api_recepies/: imported.txt
docker/api_conf/: 3decision_commands.py  settings.py
endpoints/: __init__.py  get_project_id.py  get_structure.py  ligand_endpoints.py  post_structure.py  project_endpoints.py  structure_endpoints.py
session/: req_session.py
unit_tests/: test_biomolecule_annotation.py  test_biomolecule_annotation_input_type.py
