[tool.poetry]
name = "api_python_3decision"
version = "0.1.0"
description = "3decision python api wrapper"
authors = ["3decision <3decision@discngine.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
requests = "^2.26.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
